# dataset-processing

./: .gitignore  README.md  RESULTS.md  ROUTES.md  pyproject.toml  requirements-cluster.txt
configs/: take045.json
fk_compare/: __init__.py  g1_fk.py  heft_batch.py  motion.py
scripts/: compare_heft.py  compare_results.py  export_heft.py  export_isaaclab.py  export_mjwarp.py  prepare_motion.py  process_dataset_multigpu.py  process_isaaclab_pos36.py
tests/: test_cluster_pipeline.py  test_heft_batch.py  test_motion.py
