[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fk-backend-compare"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8"]
gpu-dataset = ["torch>=2.4"]
cluster = ["torch>=2.4"]

[tool.setuptools.packages.find]
include = ["fk_compare*"]

[tool.pytest.ini_options]
pythonpath = ["."]
